<resources>
    <string name="app_name">Easy Inventory2</string>

    <!-- Strings related to login -->
    <string name="prompt_name">帳號</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="btn_add">增加</string>
    <string name="error_incorrect_password">密碼錯誤</string>
    <string name="error_field_required">輸入有錯誤</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="inventory">盤點</string>
    <string name="location_move">庫位移轉</string>
    <string name="data_update">上傳</string>
    <string name="location">庫位</string>
    <string name="inventory_num">盤點單號</string>
    <string name="row_num">筆數</string>
    <string name="input_inv_num">請輸入盤點單號</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="barcode_is_empty">請輸入條碼</string>
    <string name="upload_error">檔案上傳失敗</string>
    <string name="check_network">請檢查網路</string>
    <string name="upload_success">上傳成功</string>
    <string name="timeout">網路逾時</string>
    <string name="network_error">網路發生錯誤</string>
    <string name="logout">登出</string>
    <string name="logout_message">注意!!有資料未上傳，是否要登出嗎?</string>
</resources>
